@@ -30,10 +30,12 @@
 
 **sbohints** is a script for querying and editing the blacklist and
 requests for optional dependencies and automatic reverse dependency
-rebuilds made in [sbotools.hints(5)](sbotools.hints.5.md). The modification flags are
-**\--blacklist**, **\--optional**, **\--replace-optional** and
-**\--reverse**. These can be used in conjunction with **\--clear**, but
-not with each other.
+rebuilds made in [sbotools.hints(5)](sbotools.hints.5.md). Please note that all hints apply
+equally to the *compat32* version of the target script or scripts;
+specific requests for *compat32* scripts are unsupported. The
+modification flags are **\--blacklist**, **\--optional**,
+**\--replace-optional** and **\--reverse**. These can be used in
+conjunction with **\--clear**, but not with each other.
 
 Non-root users can only call **sbohints** with the **\--list**,
 **\--query**, **\--help** and **\--version** flags. If an invalid
