@@ -22,7 +22,14 @@ and requests for optional dependencies and automatic
 reverse dependency rebuilds made in
 .B
 sbotools.hints(5)\fR\
-\&. The modification flags are
+\&. Please note that all hints apply equally to the
+.I
+compat32
+version of the target script or scripts; specific requests for
+.I
+compat32
+scripts are unsupported. The modification
+flags are
 .B
 --blacklist\fR\
 \&,
