@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Setting Orange, Discord 2, 3191 YOLD" "" "sbotools 3.4.2"
+.TH SBO::Lib::Util 3 "Sweetmorn, Discord 3, 3191 YOLD" "" "sbotools 3.4.2"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -107,7 +107,8 @@ situations, make a copy (see e.g. \f(CW@on_blacklist()\fR.)
 .Ve
 .PP
 \&\f(CWauto_reverse()\fR checks whether automatic reverse dependency rebuilding for \f(CW$sbo\fR has
-been requested. Note that global array \f(CW@listings\fR is copied.
+been requested. Results will be the same for the \f(CW\*(C`compat32\*(C'\fR version of the script. Note
+that global array \f(CW@listings\fR is copied.
 .SS build_cmp
 .IX Subsection "build_cmp"
 .Vb 1
@@ -149,8 +150,10 @@ it in a format suitable for appending to a Slackware package version.
 \&  my $optional = get_optional($sbo)
 .Ve
 .PP
-\&\f(CWget_optional()\fR checks for user-requested optional dependencies for \f(CW$sbo\fR. Note that
-global array \f(CW@listings\fR is copied.
+\&\f(CWget_optional()\fR checks for user-requested optional dependencies for \f(CW$sbo\fR.
+In all cases, results for \f(CW\*(C`compat32\*(C'\fR scripts have the corresponding \f(CW\*(C`compat32\*(C'\fR
+scripts to the results for the base script. Note that global array \f(CW@listings\fR is
+copied.
 .SS get_sbo_from_loc
 .IX Subsection "get_sbo_from_loc"
 .Vb 1
@@ -228,8 +231,9 @@ all other scripts lint the full configuration at startup.
 \&  my $result = on_blacklist($sbo);
 .Ve
 .PP
-\&\f(CWon_blacklist()\fR checks whether \f(CW$sbo\fR has been blacklisted. Note that
-global array \f(CW@listings\fR is copied.
+\&\f(CWon_blacklist()\fR checks whether \f(CW$sbo\fR has been blacklisted. Results will
+be the same for the \f(CW\*(C`compat32\*(C'\fR version of the script. Note that global array
+\&\f(CW@listings\fR is copied.
 .SS open_fh
 .IX Subsection "open_fh"
 .Vb 1
