@@ -24,6 +24,9 @@ sbotools
   * Pkgs.pm: Properly ignore uninstalled CPAN modules
   * sbofind: Report on scripts installed from the CPAN, in whole or in part
   * sboinstall: Make --reverse-rebuild usable with --compat32; --use-template is incompatible
+  * sboupgrade: Restore --compat32, which was deprecated in 2013 and partially removed in 2015
+  * sbohints: --reset was blocked by mistake; unblocked
+  * Tree.pm: Properly report compat32 scripts in LOCAL_OVERRIDES
 
 * 3.4.2 - 2025-02-07
   * Build.pm: When distcleaning, do not delete files that are needed later in the queue
